# unified-memory-microbench

./: CMakeLists.txt  README.md  alignment.hpp  allocator.cuh  check_cuda.cuh  cuda_malloc_managed.cuh  naive.cu  results.hpp  triad.cu  triad.cuh  triad_footprint.cu  triad_footprint.cuh  triad_footprint_system.cu  triad_system.cu
toolchains/: at11.toolchain
